Addded to swagger definition api-key authentication
