# src/webapp/static/swaggerui/swagger.json
@@ -337,6 +337,18 @@
       }
     }
   },
+  "securityDefinitions": {
+    "bearerAuth": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
+  "security": [
+    {
+      "bearerAuth": []
+    }
+  ],
   "tags": [
     {
       "description": "Access to user endpoints",
